AParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .AListener import AListener
else:
    from AListener import AListener


class AParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'\n'", u"';'", u"'{'", u"'}'", u"'if'", 
                     u"'else'", u"'('", u"')'", u"'['", u"','", u"']'", 
                     u"':'", u"'\\'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"FLOAT", u"INT", u"STR", 
                      u"NAME", u"CMT", u"WS" ]

    RULE_start = 0
    RULE_m = 1
    RULE_r = 2
    RULE_s = 3
    RULE_b = 4
    RULE_c = 5
    RULE_e = 6

    ruleNames =  [ "start", "m", "r", "s", "b", "c", "e" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    FLOAT=14
    INT=15
    STR=16
    NAME=17
    CMT=18
    WS=19

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.SContext)
            else:
                return self.getTypedRuleContext(AParser.SContext,i)


        def getRuleIndex(self):
            return AParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitStart(self)




    def start(self):

        localctx = AParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AParser.T__0) | (1 << AParser.T__1) | (1 << AParser.T__2) | (1 << AParser.T__4) | (1 << AParser.T__6) | (1 << AParser.T__8) | (1 << AParser.T__12) | (1 << AParser.STR) | (1 << AParser.NAME))) != 0):
                self.state = 14
                self.s()
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AParser.RULE_m

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterM(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitM(self)




    def m(self):

        localctx = AParser.MContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_m)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            _la = self._input.LA(1)
            if not(_la==AParser.T__0 or _la==AParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def c(self):
            return self.getTypedRuleContext(AParser.CContext,0)


        def m(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.MContext)
            else:
                return self.getTypedRuleContext(AParser.MContext,i)


        def getRuleIndex(self):
            return AParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitR(self)




    def r(self):

        localctx = AParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_r)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            _la = self._input.LA(1)
            if _la==AParser.T__0 or _la==AParser.T__1:
                self.state = 22
                self.m()


            self.state = 25
            self.c()
            self.state = 26
            self.m()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def m(self):
            return self.getTypedRuleContext(AParser.MContext,0)


        def r(self):
            return self.getTypedRuleContext(AParser.RContext,0)


        def getRuleIndex(self):
            return AParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitS(self)




    def s(self):

        localctx = AParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_s)
        try:
            self.state = 30
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.m()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.r()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.SContext)
            else:
                return self.getTypedRuleContext(AParser.SContext,i)


        def getRuleIndex(self):
            return AParser.RULE_b

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterB(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitB(self)




    def b(self):

        localctx = AParser.BContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_b)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(AParser.T__2)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AParser.T__0) | (1 << AParser.T__1) | (1 << AParser.T__2) | (1 << AParser.T__4) | (1 << AParser.T__6) | (1 << AParser.T__8) | (1 << AParser.T__12) | (1 << AParser.STR) | (1 << AParser.NAME))) != 0):
                self.state = 33
                self.s()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(AParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AParser.RULE_c

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallContext(CContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.CContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.EContext)
            else:
                return self.getTypedRuleContext(AParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitCall(self)


    class IfElseContext(CContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.CContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def r(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.RContext)
            else:
                return self.getTypedRuleContext(AParser.RContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitIfElse(self)



    def c(self):

        localctx = AParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_c)
        self._la = 0 # Token type
        try:
            self.state = 52
            token = self._input.LA(1)
            if token in [AParser.T__4]:
                localctx = AParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(AParser.T__4)
                self.state = 42
                self.r()
                self.state = 43
                self.r()
                self.state = 44
                self.match(AParser.T__5)
                self.state = 45
                self.r()

            elif token in [AParser.T__2, AParser.T__6, AParser.T__8, AParser.T__12, AParser.STR, AParser.NAME]:
                localctx = AParser.CallContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 47
                    self.e()
                    self.state = 50 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AParser.T__2) | (1 << AParser.T__6) | (1 << AParser.T__8) | (1 << AParser.T__12) | (1 << AParser.STR) | (1 << AParser.NAME))) != 0)):
                        break


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AParser.RULE_e

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self, i:int=None):
            if i is None:
                return self.getTokens(AParser.STR)
            else:
                return self.getToken(AParser.STR, i)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitStr(self)


    class LambdaContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(AParser.BContext,0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(AParser.NAME)
            else:
                return self.getToken(AParser.NAME, i)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterLambda(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitLambda(self)


    class NameContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(AParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitName(self)


    class DictContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.EContext)
            else:
                return self.getTypedRuleContext(AParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterDict(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitDict(self)


    class BlockContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(AParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitBlock(self)


    class CallExprContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def c(self):
            return self.getTypedRuleContext(AParser.CContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitCallExpr(self)


    class ListContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AParser.EContext)
            else:
                return self.getTypedRuleContext(AParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AListener ):
                listener.exitList(self)



    def e(self):

        localctx = AParser.EContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_e)
        self._la = 0 # Token type
        try:
            self.state = 102
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = AParser.StrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 55 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 54
                        self.match(AParser.STR)

                    else:
                        raise NoViableAltException(self)
                    self.state = 57 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 2:
                localctx = AParser.NameContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(AParser.NAME)
                pass

            elif la_ == 3:
                localctx = AParser.BlockContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.b()
                pass

            elif la_ == 4:
                localctx = AParser.CallExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.match(AParser.T__6)
                self.state = 62
                self.c()
                self.state = 63
                self.match(AParser.T__7)
                pass

            elif la_ == 5:
                localctx = AParser.ListContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.match(AParser.T__8)
                self.state = 74
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AParser.T__2) | (1 << AParser.T__6) | (1 << AParser.T__8) | (1 << AParser.T__12) | (1 << AParser.STR) | (1 << AParser.NAME))) != 0):
                    self.state = 66
                    self.e()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==AParser.T__9:
                        self.state = 67
                        self.match(AParser.T__9)
                        self.state = 68
                        self.e()
                        self.state = 73
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 76
                self.match(AParser.T__10)
                pass

            elif la_ == 6:
                localctx = AParser.DictContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.match(AParser.T__2)
                self.state = 91
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AParser.T__2) | (1 << AParser.T__6) | (1 << AParser.T__8) | (1 << AParser.T__12) | (1 << AParser.STR) | (1 << AParser.NAME))) != 0):
                    self.state = 78
                    self.e()
                    self.state = 79
                    self.match(AParser.T__11)
                    self.state = 80
                    self.e()
                    self.state = 88
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==AParser.T__9:
                        self.state = 81
                        self.match(AParser.T__9)
                        self.state = 82
                        self.e()
                        self.state = 83
                        self.match(AParser.T__11)
                        self.state = 84
                        self.e()
                        self.state = 90
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 93
                self.match(AParser.T__3)
                pass

            elif la_ == 7:
                localctx = AParser.LambdaContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 94
                self.match(AParser.T__12)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AParser.NAME:
                    self.state = 95
                    self.match(AParser.NAME)
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                self.b()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




